fixes #11 Provide OSGi Meta-information

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,29 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
+            <!-- OSGI Manifest generation -->
+            <plugin>
+			    <groupId>biz.aQute.bnd</groupId>
+			    <artifactId>bnd-maven-plugin</artifactId>
+			    <version>3.4.0</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>bnd-process</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jar-plugin</artifactId>
+			    <version>3.0.2</version>
+			    <configuration>
+					<archive>
+						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+					</archive>
+				</configuration>
+			</plugin>
 
             <!-- Code coverage -->
             <plugin>
