--- a/pom.xml
+++ b/pom.xml
@@ -92,17 +92,27 @@
                 <version>2.5.3</version>
             </plugin>
             <!-- OSGI Manifest generation -->
-            <plugin>
-			    <groupId>biz.aQute.bnd</groupId>
-			    <artifactId>bnd-maven-plugin</artifactId>
-			    <version>3.4.0</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>bnd-process</goal>
-			            </goals>
-			        </execution>
-			    </executions>
+            <plugin>   
+			  <groupId>org.apache.felix</groupId>
+			  <artifactId>maven-bundle-plugin</artifactId>
+			  <version>2.5.4</version>
+			  <extensions>true</extensions>
+		     <configuration>
+		          <instructions>
+		            <Export-Package>com.github.openjson</Export-Package>
+					<Bundle-License>http://www.apache.org/licenses/LICENSE-2.0</Bundle-License>
+					<Bundle-DocURL>https://github.com/openjson/openjson</Bundle-DocURL>
+		          </instructions>
+		     </configuration>
+			  <executions>
+			    <execution>
+			      <id>bundle-manifest</id>
+			      <phase>process-classes</phase>
+			      <goals>    
+			        <goal>manifest</goal>
+			      </goals>   
+			    </execution>
+			  </executions>
 			</plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
