--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                 <version>2.5.3</version>
             </plugin>
             <!-- OSGI Manifest generation -->
-            <plugin>   
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>2.5.4</version>
@@ -108,9 +108,9 @@
                     <execution>
                         <id>bundle-manifest</id>
                         <phase>process-classes</phase>
-                        <goals>    
+                        <goals>
                             <goal>manifest</goal>
-                        </goals>   
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -206,7 +206,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
+                        <version>3.0.0-M1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
