--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.openjson</groupId>
     <artifactId>openjson</artifactId>
-    <version>1.0.10-SNAPSHOT</version>
+    <version>1.0.10</version>
 
     <packaging>jar</packaging>
     <name>Open JSON</name>
