--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
-
+                <configuration>
+                    <source>1.6</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -207,6 +209,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.0.0-M1</version>
+                        <configuration>
+                            <source>1.6</source>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
