Set Automatic-Module-Name
This enables dependent libraries and applications to move froward in becoming jigsaw/java module system compliant.

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,9 @@
                 <configuration>
                     <archive>
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.github.openjson</Automatic-Module-Name>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
